[gd_scene load_steps=16 format=3 uid="uid://6am0aissrwio"]

[ext_resource type="Script" uid="uid://dux1vin1qctno" path="res://player.gd" id="1_tynyf"]
[ext_resource type="Texture2D" uid="uid://dyorw4v8lajnw" path="res://assets/walls_floor.png" id="2_t1bju"]
[ext_resource type="Script" uid="uid://b1p3omrc8xvj4" path="res://patrol_enemy_1.gd" id="3_3b5sf"]
[ext_resource type="Script" uid="uid://b1difgxamanbb" path="res://game_controller.gd" id="4_3b5sf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xp1hc"]
radius = 12.0

[sub_resource type="Gradient" id="Gradient_epwvp"]
offsets = PackedFloat32Array(0, 0.510989, 1)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3b5sf"]
gradient = SubResource("Gradient_epwvp")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_count = 2

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ahvyg"]
texture = ExtResource("2_t1bju")
margins = Vector2i(8, 3)
7:15/0 = 0
9:16/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rkaxe"]
texture = ExtResource("2_t1bju")
margins = Vector2i(2, 0)
texture_region_size = Vector2i(14, 16)
1:0/0 = 0
0:0/0 = 0
2:0/0 = 0
2:1/0 = 0
0:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bm85s"]
texture = ExtResource("2_t1bju")
margins = Vector2i(0, 21)
texture_region_size = Vector2i(16, 15)
use_texture_padding = false
3:22/0 = 0
3:21/0 = 0
4:21/0 = 0
4:22/0 = 0

[sub_resource type="TileSet" id="TileSet_3b5sf"]
sources/3 = SubResource("TileSetAtlasSource_rkaxe")
sources/4 = SubResource("TileSetAtlasSource_bm85s")
sources/0 = SubResource("TileSetAtlasSource_ahvyg")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fkmay"]
size = Vector2(20, 29.5)

[sub_resource type="Gradient" id="Gradient_71vg2"]
interpolation_color_space = 2
offsets = PackedFloat32Array(0.409091, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xlct3"]
gradient = SubResource("Gradient_71vg2")
width = 48
fill = 1
fill_from = Vector2(0.490029, 0.504274)

[sub_resource type="CircleShape2D" id="CircleShape2D_ipj8u"]

[node name="ShadowEscape" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
z_index = 5
script = ExtResource("1_tynyf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_xp1hc")

[node name="PointLight2D" type="PointLight2D" parent="Player"]
energy = 1.6
shadow_enabled = true
texture = SubResource("GradientTexture2D_3b5sf")
texture_scale = 2.0

[node name="Sprite2D" type="Sprite2D" parent="Player"]

[node name="CorridorTilemap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_3b5sf")
format = 2
layer_0/tile_data = PackedInt32Array(-131072, 589824, 16, -65537, 589824, 16, -196608, 589824, 16, -131073, 589824, 16, -131074, 589824, 16, -65538, 589824, 16, -2, 589824, 16, 65534, 589824, 16, 131070, 589824, 16, 131071, 589824, 16, 65536, 589824, 16, 65537, 589824, 16, 1, 589824, 16, 0, 589824, 16, 65535, 589824, 16, -1, 589824, 16, -65536, 589824, 16, -65535, 589824, 16, -131071, 589824, 16, -196607, 589824, 16, 196606, 589824, 16, 196607, 589824, 16, 131072, 589824, 16, 131073, 589824, 16, -262154, 589824, 16, -262153, 589824, 16, -262152, 589824, 16, -262151, 589824, 16, -262150, 589824, 16, -262149, 589824, 16, -262148, 589824, 16, -262147, 3, 0, -262146, 65539, 0, -327679, 65539, 0, -327678, 131075, 0, -327677, 589824, 16, -327676, 589824, 16, -327675, 589824, 16, -327674, 589824, 16, -327673, 589824, 16, -327672, 589824, 16, -327671, 589824, 16, -327670, 589824, 16, -327669, 589824, 16, -327668, 589824, 16, -327667, 589824, 16, -327666, 589824, 16, -327665, 589824, 16, -327664, 589824, 16, -262155, 589824, 16, -262156, 589824, 16, -262157, 589824, 16, -262158, 589824, 16, -196622, 589824, 16, -131086, 589824, 16, -65550, 589824, 16, -14, 589824, 16, 65522, 589824, 16, 131058, 589824, 16, 196594, 589824, 16, 262130, 589824, 16, 327666, 589824, 16, 393202, 589824, 16, 458738, 589824, 16, 524274, 589824, 16, 589810, 589824, 16, 655346, 589824, 16, 720882, 589824, 16, 786418, 589824, 16, 851954, 589824, 16, 917490, 589824, 16, 983026, 589824, 16, 1048562, 589824, 16, 1114098, 589824, 16, 1179634, 589824, 16, 1245170, 589824, 16, 1310706, 589824, 16, -327694, 589824, 16, -393230, 589824, 16, -458766, 589824, 16, -524302, 589824, 16, -589838, 589824, 16, -655374, 589824, 16, -655373, 589824, 16, -655372, 589824, 16, -655371, 589824, 16, -655370, 589824, 16, -655369, 589824, 16, -655368, 589824, 16, -655367, 589824, 16, -655366, 589824, 16, -655365, 589824, 16, -655364, 589824, 16, -655363, 589824, 16, -655362, 589824, 16, -655361, 589824, 16, -655360, 589824, 16, -655359, 589824, 16, -655358, 589824, 16, -655357, 589824, 16, -655356, 589824, 16, -655355, 589824, 16, -655354, 589824, 16, -655353, 589824, 16, -720889, 589824, 16, -720888, 589824, 16, -720890, 589824, 16, -720896, 589824, 16, -720895, 589824, 16, -720894, 589824, 16, -720893, 589824, 16, -720892, 589824, 16, -720891, 589824, 16, -720887, 589824, 16, -720886, 589824, 16, -720885, 589824, 16, -720884, 589824, 16, -655348, 589824, 16, -655347, 589824, 16, -655346, 589824, 16, -655345, 589824, 16, -720881, 589824, 16, -720880, 589824, 16, -720882, 589824, 16, -720883, 589824, 16, -655344, 589824, 16, -589808, 589824, 16, -524272, 589824, 16, -458736, 589824, 16, -393200, 589824, 16, -262128, 589824, 16, -196592, 589824, 16, -131056, 589824, 16, -65520, 589824, 16, 16, 589824, 16, 65552, 589824, 16, 131088, 589824, 16, 196624, 589824, 16, 262160, 589824, 16, 327696, 589824, 16, 393232, 589824, 16, 458768, 589824, 16, 524304, 589824, 16, 589840, 589824, 16, 655376, 589824, 16, 720912, 589824, 16, 786448, 589824, 16, 851984, 589824, 16, 917520, 589824, 16, 983056, 589824, 16, 1048592, 589824, 16, 1048591, 589824, 16, 1114127, 589824, 16, 1179663, 589824, 16, 1179662, 589824, 16, 1179661, 589824, 16, 1179660, 589824, 16, 1179659, 589824, 16, 1179658, 589824, 16, 1179657, 589824, 16, 1179656, 589824, 16, 1179655, 589824, 16, 1179654, 589824, 16, 1179653, 589824, 16, 1179652, 589824, 16, 1179651, 589824, 16, 1179650, 589824, 16, 1179649, 589824, 16, 1179648, 589824, 16, 1245183, 589824, 16, 1245182, 589824, 16, 1245181, 589824, 16, 1245180, 589824, 16, 1245179, 589824, 16, 1245178, 589824, 16, 1179641, 589824, 16, 1179640, 589824, 16, 1179639, 589824, 16, 1179638, 589824, 16, 1179637, 589824, 16, 1179636, 589824, 16, 1179635, 589824, 16, 1245173, 589824, 16, 1245174, 589824, 16, 1245175, 589824, 16, 1245176, 589824, 16, 1245177, 589824, 16, 1179643, 589824, 16, 1114107, 589824, 16, 1048572, 589824, 16, 983036, 589824, 16, 983037, 589824, 16, 917501, 589824, 16, 851966, 589824, 16, 786431, 589824, 16, 720896, 589824, 16, 655361, 65539, 4, 655362, 131075, 4, 786430, 589824, 16, 851965, 589824, 16, 851964, 589824, 16, 851963, 589824, 16, 851962, 589824, 16, 851961, 589824, 16, 851960, 589824, 16, 851959, 589824, 16, 851958, 589824, 16, 851957, 589824, 16, 786420, 589824, 16, 786419, 589824, 16, 262131, 589824, 16, 196596, 589824, 16, 196597, 589824, 16, 131062, 589824, 16, 131063, 589824, 16, 131064, 589824, 16, 131065, 589824, 16, 131066, 589824, 16, 131067, 589824, 16, 131068, 589824, 16, 131069, 3, 1, 65538, 131075, 1, 131074, 131075, 1, 196610, 131075, 1, 262146, 131075, 1, 327682, 131075, 1, 393218, 131075, 1, 458754, 131075, 1, 524290, 131075, 1, 589826, 131075, 1, 720897, 589824, 16, 786433, 589824, 16, 851968, 589824, 16, 983039, 589824, 16, 983038, 589824, 16, 786428, 589824, 16, 720892, 589824, 16, 655356, 589824, 16, 589820, 589824, 16, 524283, 589824, 16, 458747, 589824, 16, 393211, 589824, 16, 327675, 589824, 16, 262138, 589824, 16, 196602, 589824, 16, 65530, 589824, 16, -6, 589824, 16, -5, 589824, 16, 65531, 589824, 16, 1310707, 589824, 16, 1310708, 589824, 16, 1310709, 589824, 16, 1310710, 589824, 16, 1310711, 589824, 16, 1310712, 589824, 16, 1310713, 589824, 16, 1310714, 589824, 16, 1310715, 589824, 16, 1310716, 589824, 16, 1310717, 589824, 16, 1310718, 589824, 16, 1310719, 589824, 16, 1245184, 589824, 16, 1245185, 589824, 16, 1245186, 589824, 16, 1245187, 589824, 16, 1245188, 589824, 16, 1245189, 589824, 16, 1245190, 589824, 16, 1245191, 589824, 16, 1245192, 589824, 16, 1245193, 589824, 16, 1245194, 589824, 16, 1245195, 589824, 16, 1245196, 589824, 16, 1245197, 589824, 16, 1245198, 589824, 16, 1245199, 589824, 16, 1245200, 589824, 16, 1179664, 589824, 16, 1114128, 589824, 16, 983041, 589824, 16, 917505, 589824, 16, 851970, 589824, 16, 786434, 589824, 16, 720898, 589824, 16, 589827, 589824, 16, 524291, 589824, 16, 458755, 589824, 16, 393220, 589824, 16, 327684, 589824, 16, 262149, 589824, 16, 196614, 589824, 16, 131078, 589824, 16, 65543, 589824, 16, 131079, 589824, 16, 196615, 589824, 16, 262151, 589824, 16, 327687, 589824, 16, 393223, 589824, 16, 458759, 589824, 16, 524295, 589824, 16, 589831, 589824, 16, 655367, 589824, 16, 720903, 589824, 16, 786438, 589824, 16, 851974, 589824, 16, 851973, 589824, 16, 786437, 589824, 16, 720900, 589824, 16, 655364, 589824, 16, 393219, 589824, 16, 327683, 589824, 16, 65539, 589824, 16, 3, 589824, 16, -65533, 589824, 16, -131069, 589824, 16, -196605, 589824, 16, -262140, 589824, 16, -393211, 589824, 16, -458746, 589824, 16, -524282, 589824, 16, -589818, 589824, 16, -589817, 589824, 16, -524281, 589824, 16, -458745, 589824, 16, -393208, 589824, 16, -262136, 589824, 16, -196600, 589824, 16, -131063, 589824, 16, -65527, 589824, 16, 9, 589824, 16, 65545, 589824, 16, 131081, 589824, 16, 196617, 589824, 16, 262153, 589824, 16, 327689, 589824, 16, 393225, 589824, 16, 458760, 589824, 16, 393224, 589824, 16, 327688, 589824, 16, 262152, 589824, 16, 196616, 589824, 16, 7, 589824, 16, -65530, 589824, 16, -131066, 589824, 16, -196602, 589824, 16, -262138, 589824, 16, -458747, 589824, 16, -524283, 589824, 16, -589819, 589824, 16, -262139, 589824, 16, -196603, 589824, 16, -131067, 589824, 16, -65531, 589824, 16, 5, 589824, 16, 65541, 589824, 16, 131077, 589824, 16, 196613, 589824, 16, 327685, 589824, 16, 393221, 589824, 16, 458756, 589824, 16, 524292, 589824, 16, 262148, 589824, 16, 196612, 589824, 16, 131076, 589824, 16, 65540, 589824, 16, 4, 589824, 16, -65532, 589824, 16, -131068, 589824, 16, -196604, 589824, 16, -196606, 131075, 1, -262142, 131075, 1, -393214, 589824, 16, -458750, 589824, 16, -131070, 131075, 1, -65534, 131075, 1, 2, 131075, 1, 393217, 589824, 16, 327681, 589824, 16, 262145, 589824, 16, 196609, 589824, 16, -262143, 589824, 16, -393215, 589824, 16, -458751, 589824, 16, -524287, 589824, 16, -589823, 589824, 16, -262144, 589824, 16, 196605, 3, 1, 262141, 3, 1, 262140, 589824, 16, 196604, 589824, 16, -65541, 589824, 16, -131077, 589824, 16, -196613, 589824, 16, -327685, 589824, 16, -393221, 589824, 16, 196603, 589824, 16, 262139, 589824, 16, 589819, 589824, 16, 524284, 589824, 16, 458749, 3, 1, 393213, 3, 1, 327677, 3, 1, 65533, 3, 1, -3, 3, 1, -65539, 3, 1, -131075, 3, 1, -196611, 3, 1, -327683, 589824, 16, -393219, 589824, 16, -458754, 589824, 16, -393218, 589824, 16, 65532, 589824, 16, -393220, 589824, 16, -458756, 589824, 16, -327684, 589824, 16, -196612, 589824, 16, -131076, 589824, 16, -65540, 589824, 16, -4, 589824, 16, 327676, 589824, 16, -327682, 589824, 16, -196609, 589824, 16, -196610, 589824, 16, -327689, 589824, 16, -327688, 589824, 16, -327687, 589824, 16, -327686, 589824, 16, -393213, 589824, 16, -393212, 589824, 16, -393210, 589824, 16, -393209, 589824, 16, -393207, 589824, 16, -393206, 589824, 16, -393205, 589824, 16, -458740, 589824, 16, -458741, 589824, 16, -458742, 589824, 16, -458743, 589824, 16, -458744, 589824, 16, -524284, 589824, 16, -524285, 589824, 16, -589822, 589824, 16, -589824, 589824, 16, -524289, 589824, 16, -524290, 589824, 16, -524291, 589824, 16, -524292, 589824, 16, -524293, 589824, 16, -524294, 589824, 16, -589821, 589824, 16, -589820, 589824, 16, -458755, 589824, 16, -393217, 196612, 21, -458752, 262148, 21, -524288, 589824, 16, -458753, 589824, 16, -524286, 589824, 16, -458757, 589824, 16, -458758, 589824, 16, -458759, 589824, 16, -458760, 589824, 16, -458761, 589824, 16, -458762, 589824, 16, -393227, 589824, 16, -327691, 589824, 16, -327690, 589824, 16, -393223, 589824, 16, -393222, 589824, 16, -393226, 589824, 16, -196619, 589824, 16, -131084, 589824, 16, -65548, 589824, 16, -12, 589824, 16, -458763, 589824, 16, -196617, 589824, 16, -131081, 589824, 16, -65545, 589824, 16, -9, 589824, 16, 65528, 589824, 16, 196600, 589824, 16, 262136, 589824, 16, 327672, 589824, 16, 393209, 589824, 16, 458745, 589824, 16, 524281, 589824, 16, 589818, 589824, 16, 655354, 589824, 16, 720890, 589824, 16, 786426, 589824, 16, 655353, 589824, 16, 589817, 589824, 16, 393208, 589824, 16, -393225, 589824, 16, -524298, 589824, 16, -196618, 589824, 16, -131082, 589824, 16, -65546, 589824, 16, -10, 589824, 16, 65527, 589824, 16, 196599, 589824, 16, 262135, 589824, 16, 327671, 589824, 16, 393207, 589824, 16, 458743, 589824, 16, 524279, 589824, 16, 589815, 589824, 16, 655351, 589824, 16, 720887, 589824, 16, 524278, 589824, 16, 458742, 589824, 16, 393206, 589824, 16, 327670, 589824, 16, 262134, 589824, 16, 131061, 589824, 16, 65525, 589824, 16, -11, 589824, 16, -65547, 589824, 16, -131083, 589824, 16, -327692, 589824, 16, -393228, 589824, 16, -458764, 589824, 16, -196620, 589824, 16, 65524, 589824, 16, 131060, 589824, 16, 262132, 589824, 16, 327668, 589824, 16, 393204, 589824, 16, 458741, 589824, 16, 524277, 589824, 16, 589813, 589824, 16, 655349, 589824, 16, 720885, 589824, 16, 786421, 589824, 16, 917494, 589824, 16, 983030, 589824, 16, 1048566, 589824, 16, 393205, 589824, 16, 327669, 589824, 16, 262133, 589824, 16, 589814, 589824, 16, 655350, 589824, 16, 720886, 589824, 16, 786422, 589824, 16, -393224, 589824, 16, -196615, 589824, 16, -131079, 589824, 16, -65543, 589824, 16, -7, 589824, 16, 786429, 589824, 16, -65542, 589824, 16, -131078, 589824, 16, 917500, 589824, 16, 655355, 589824, 16, 393210, 589824, 16, 327674, 589824, 16, 65529, 589824, 16, -524296, 589824, 16, -196616, 589824, 16, -131080, 589824, 16, -65544, 589824, 16, -8, 589824, 16, 65523, 589824, 16, -13, 589824, 16, -65549, 589824, 16, -131085, 589824, 16, -196621, 589824, 16, 458746, 589824, 16, 458744, 589824, 16, 65526, 589824, 16, 196598, 589824, 16, 131059, 589824, 16, 196595, 589824, 16, 327667, 589824, 16, 393203, 589824, 16, 458739, 589824, 16, 524275, 589824, 16, 589811, 589824, 16, 1114101, 589824, 16, 1114102, 589824, 16, 1048567, 589824, 16, 983031, 589824, 16, 983032, 589824, 16, 983033, 589824, 16, 1048569, 589824, 16, 1048568, 589824, 16, 1114104, 589824, 16, 1114103, 589824, 16, 1245172, 589824, 16, 1245171, 589824, 16, 1114119, 589824, 16, 1114120, 589824, 16, 1048585, 589824, 16, 1048586, 589824, 16, 1048587, 589824, 16, 1048588, 589824, 16, 1048589, 589824, 16, 1048584, 589824, 16, 1048583, 589824, 16, 1048582, 589824, 16, 1048581, 589824, 16, 1048580, 589824, 16, 1048579, 589824, 16, 1048578, 589824, 16, 1048577, 589824, 16, 1048576, 589824, 16, 1114111, 589824, 16, 1114110, 589824, 16, 1114109, 589824, 16, 1114108, 589824, 16, 1048573, 589824, 16, 1048574, 589824, 16, 1048575, 589824, 16, 983040, 589824, 16, 917506, 589824, 16, 917507, 589824, 16, 917508, 589824, 16, 917509, 589824, 16, 917510, 589824, 16, 917511, 589824, 16, 1114106, 589824, 16, 917504, 589824, 16, 851969, 589824, 16, 786435, 589824, 16, 786436, 589824, 16, 720901, 589824, 16, 720902, 589824, 16, 655368, 589824, 16, 589833, 589824, 16, 589834, 589824, 16, 524299, 589824, 16, 524300, 589824, 16, 524301, 589824, 16, 589828, 589824, 16, 524298, 589824, 16, 458763, 589824, 16, 393228, 589824, 16, 327693, 589824, 16, 262158, 589824, 16, 196622, 589824, 16, 131086, 589824, 16, 65551, 589824, 16, 15, 589824, 16, -65521, 589824, 16, -131057, 589824, 16, 14, 589824, 16, 65549, 589824, 16, 131085, 589824, 16, 196620, 589824, 16, 262156, 589824, 16, 327692, 589824, 16, 393227, 589824, 16, 720904, 589824, 16, 589832, 589824, 16, 524296, 589824, 16, 458761, 589824, 16, 524297, 589824, 16, 655369, 589824, 16, 720905, 589824, 16, 786441, 589824, 16, 65542, 589824, 16, 6, 589824, 16, 262150, 589824, 16, 327686, 589824, 16, 393222, 589824, 16, 458758, 589824, 16, 524294, 589824, 16, 589830, 589824, 16, 458757, 589824, 16, 524293, 589824, 16, 589829, 589824, 16, 655365, 589824, 16, 65546, 589824, 16, 10, 589824, 16, -65526, 589824, 16, -131062, 589824, 16, -196597, 589824, 16, -262133, 589824, 16, -262134, 589824, 16, -196598, 589824, 16, 65544, 589824, 16, 131080, 589824, 16, 196611, 589824, 16, 262147, 589824, 16, 131075, 589824, 16, 458752, 589824, 16, 589823, 589824, 16, 524287, 589824, 16, 458751, 589824, 16, 393215, 589824, 16, 327679, 589824, 16, 262143, 589824, 16, 196608, 589824, 16, 262144, 589824, 16, 327680, 589824, 16, 393216, 589824, 16, 393214, 589824, 16, 327678, 589824, 16, 262142, 589824, 16, 458748, 589824, 16, 458750, 589824, 16, 524286, 589824, 16, 524285, 3, 1, 393212, 589824, 16, 655357, 3, 1, 720893, 3, 4, 589821, 3, 1, -589829, 589824, 16, -196614, 589824, 16, 262137, 589824, 16, 327673, 589824, 16, 196601, 589824, 16, 524280, 589824, 16, 589816, 589824, 16, 655352, 589824, 16, 786423, 589824, 16, 917493, 589824, 16, 983029, 589824, 16, 1048564, 589824, 16, 983028, 589824, 16, 1048565, 589824, 16, 1114100, 589824, 16, 917492, 589824, 16, 851956, 589824, 16, 720884, 589824, 16, 655348, 589824, 16, 1048563, 589824, 16, 1114099, 589824, 16, 983027, 589824, 16, 917491, 589824, 16, 851955, 589824, 16, 589812, 589824, 16, 524276, 589824, 16, 458740, 589824, 16, 655347, 589824, 16, 720883, 589824, 16, 786424, 589824, 16, 917496, 589824, 16, 720888, 589824, 16, 720889, 589824, 16, 786425, 589824, 16, 917499, 589824, 16, 983035, 589824, 16, 983034, 589824, 16, 917495, 589824, 16, 917497, 589824, 16, 917498, 589824, 16, 851967, 589824, 16, 786432, 589824, 16, 786439, 589824, 16, 786440, 589824, 16, 851971, 589824, 16, 851972, 589824, 16, 917502, 589824, 16, 917503, 589824, 16, 589825, 589824, 16, 589824, 589824, 16, 720895, 65539, 4, 786427, 589824, 16, 655358, 589824, 16, 655359, 589824, 16, 524289, 589824, 16, 720891, 589824, 16, 589822, 589824, 16, 458753, 589824, 16, 524288, 589824, 16, 655360, 65539, 4, 524282, 589824, 16, 1048571, 589824, 16, 1048570, 589824, 16, 1114105, 589824, 16, 1179645, 589824, 16, 1179644, 589824, 16, 1179642, 589824, 16, 1179646, 589824, 16, 1179647, 589824, 16, 1114112, 589824, 16, 1114113, 589824, 16, 1114114, 589824, 16, 1114115, 589824, 16, 1114116, 589824, 16, 1114117, 589824, 16, 1114118, 589824, 16, 1114121, 589824, 16, 1114122, 589824, 16, 1114123, 589824, 16, 1114124, 589824, 16, 1114125, 589824, 16, 1114126, 589824, 16, 1048590, 589824, 16, 983054, 589824, 16, 983055, 589824, 16, 917519, 589824, 16, 851983, 589824, 16, 786447, 589824, 16, 720911, 589824, 16, 655375, 589824, 16, 589839, 589824, 16, 524303, 589824, 16, 458767, 589824, 16, 393231, 589824, 16, 327695, 589824, 16, 262159, 589824, 16, 196623, 589824, 16, 131087, 589824, 16, -196593, 589824, 16, -262129, 589824, 16, -393201, 589824, 16, -458737, 589824, 16, -524273, 589824, 16, -589809, 589824, 16, -655349, 589824, 16, -655350, 589824, 16, -655351, 589824, 16, -655352, 589824, 16, -589825, 589824, 16, -589826, 589824, 16, -589827, 589824, 16, -589828, 589824, 16, -589830, 589824, 16, -589831, 589824, 16, -589832, 589824, 16, -589833, 589824, 16, -589837, 589824, 16, -524301, 589824, 16, -524300, 589824, 16, -327693, 589824, 16, -393229, 589824, 16, -458765, 589824, 16, -589836, 589824, 16, -589835, 589824, 16, -589834, 589824, 16, -524297, 589824, 16, -524299, 589824, 16, -524295, 589824, 16, -524280, 589824, 16, -524279, 589824, 16, -458749, 589824, 16, -458748, 589824, 16, -262141, 589824, 16, -196601, 589824, 16, -131065, 589824, 16, -131064, 589824, 16, -65528, 589824, 16, 8, 589824, 16, -65529, 589824, 16, -262137, 589824, 16, 983044, 589824, 16, 983043, 589824, 16, 720899, 589824, 16, 983042, 589824, 16, 983045, 589824, 16, 983046, 589824, 16, 983047, 589824, 16, 917512, 589824, 16, 917513, 589824, 16, 917514, 589824, 16, 917515, 589824, 16, 983051, 589824, 16, 983052, 589824, 16, 983053, 589824, 16, 983050, 589824, 16, 983049, 589824, 16, 983048, 589824, 16, 917516, 589824, 16, 917517, 589824, 16, 851981, 589824, 16, 786445, 589824, 16, 720909, 589824, 16, 655373, 589824, 16, 589837, 589824, 16, 589838, 589824, 16, 524302, 589824, 16, 458766, 589824, 16, 393230, 589824, 16, 327694, 589824, 16, 655374, 589824, 16, 720910, 589824, 16, 786446, 589824, 16, 851982, 589824, 16, 458765, 589824, 16, 589835, 589824, 16, 655370, 589824, 16, 720906, 589824, 16, 786442, 589824, 16, 786443, 589824, 16, 851979, 589824, 16, 720907, 589824, 16, 655371, 589824, 16, 720908, 589824, 16, 655372, 589824, 16, 589836, 589824, 16, 851978, 589824, 16, 851980, 589824, 16, 786444, 589824, 16, 917518, 589824, 16, 851977, 589824, 16, 851975, 589824, 16, 851976, 589824, 16, 655366, 589824, 16, 393229, 589824, 16, 262157, 589824, 16, 196621, 589824, 16, 13, 589824, 16, -65523, 589824, 16, -131059, 589824, 16, -196595, 589824, 16, -262131, 589824, 16, -393203, 589824, 16, -458739, 589824, 16, -524275, 589824, 16, -524274, 589824, 16, -589810, 589824, 16, -589811, 589824, 16, -589812, 589824, 16, -589813, 589824, 16, -589816, 589824, 16, -589815, 589824, 16, -589814, 589824, 16, -524276, 589824, 16, -524277, 589824, 16, -524278, 589824, 16, -458738, 589824, 16, -393202, 589824, 16, -262130, 589824, 16, -65524, 589824, 16, 12, 589824, 16, 65548, 589824, 16, 131084, 589824, 16, 196619, 589824, 16, 262155, 589824, 16, 327690, 589824, 16, 393226, 589824, 16, 458762, 589824, 16, 262154, 589824, 16, 196618, 589824, 16, 131082, 589824, 16, 131083, 589824, 16, 65547, 589824, 16, 11, 589824, 16, -65525, 589824, 16, -131060, 589824, 16, -131061, 589824, 16, 327691, 589824, 16, -131058, 589824, 16, -196594, 589824, 16, -65522, 589824, 16, 65550, 589824, 16, 458764, 589824, 16, -393204, 589824, 16, -262132, 589824, 16, -196596, 589824, 16, -262135, 589824, 16, -196599, 589824, 16, 1376242, 589824, 16, 1376243, 589824, 16, 1376244, 589824, 16, 1376245, 589824, 16, 1376246, 589824, 16, 1376247, 589824, 16, 1376248, 589824, 16, 1376249, 589824, 16, 1376250, 589824, 16, 1376251, 589824, 16, 1376252, 589824, 16, 1376253, 589824, 16, 1376254, 589824, 16, 1376255, 589824, 16, 1310720, 589824, 16, 1310721, 589824, 16, 1310722, 589824, 16, 1310723, 589824, 16, 1310724, 589824, 16, 1310725, 589824, 16, 1310726, 589824, 16, 1310727, 589824, 16, 1310728, 589824, 16, 1310729, 589824, 16, 1310730, 589824, 16, 1310731, 589824, 16, 1310732, 589824, 16, 1310733, 589824, 16, 1310734, 589824, 16, 1310735, 589824, 16, 1310736, 589824, 16, 720894, 65539, 4, 655363, 589824, 16, -327681, 196612, 22, -393216, 262148, 22, -262145, 458752, 15, -327680, 458752, 15)

[node name="ExitDoor" type="Area2D" parent="."]
position = Vector2(0, -84)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoor"]
visible = false
position = Vector2(0, -10.75)
shape = SubResource("RectangleShape2D_fkmay")

[node name="Sprite2D" type="Sprite2D" parent="ExitDoor"]
modulate = Color(1, 1, 1, 0.513726)
position = Vector2(-5.96046e-08, -8)
scale = Vector2(0.354167, 0.34375)
texture = SubResource("GradientTexture2D_xlct3")

[node name="ShadowPatrols" type="Node2D" parent="."]

[node name="PatrolEnemy1" type="CharacterBody2D" parent="ShadowPatrols"]
position = Vector2(0, 56)
script = ExtResource("3_3b5sf")
waypoints = Array[Vector2]([Vector2(100, 200), Vector2(300, 200)])

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowPatrols/PatrolEnemy1"]
shape = SubResource("CircleShape2D_ipj8u")

[node name="Sprite2D" type="Sprite2D" parent="ShadowPatrols/PatrolEnemy1"]
modulate = Color(1, 1, 1, 0.482353)

[node name="PatrolEnemy2" type="CharacterBody2D" parent="ShadowPatrols"]
position = Vector2(0, 127)
script = ExtResource("3_3b5sf")
waypoints = Array[Vector2]([Vector2(100, 200), Vector2(300, 200)])

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShadowPatrols/PatrolEnemy2"]
shape = SubResource("CircleShape2D_ipj8u")

[node name="Sprite2D" type="Sprite2D" parent="ShadowPatrols/PatrolEnemy2"]
modulate = Color(1, 1, 1, 0.482353)

[node name="GameController" type="Node2D" parent="."]
script = ExtResource("4_3b5sf")

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = -211.0
offset_top = -165.0
offset_right = -153.0
offset_bottom = -142.0

[node name="SanityBar" type="TextureProgressBar" parent="UI"]
offset_left = -202.0
offset_top = -136.0
offset_right = -138.0
offset_bottom = -117.0

[node name="Audio" type="Node2D" parent="."]

[node name="AmbiencePlayer" type="AudioStreamPlayer" parent="Audio"]

[node name="HeartbeatPlayer" type="AudioStreamPlayer" parent="Audio"]

[node name="GlitchPlayer" type="AudioStreamPlayer" parent="Audio"]

[node name="CrashScreen" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CrashScreen"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.00994914, 2.28621e-07, 0.285004, 1)

[node name="Label" type="Label" parent="CrashScreen"]
modulate = Color(0.804743, 0.804743, 0.804743, 1)
offset_right = 40.0
offset_bottom = 23.0
text = "CRITICAL ERROR: CANNOT TERMINATE ENTITY.EXE
SYSTEM STABILITY: 23%
REBOOTING...
"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.0338533, 0.0338533, 0.0338533, 1)

[connection signal="body_entered" from="ExitDoor" to="GameController" method="_on_exit_door_body_entered"]
